@@ -1,3 +1,12 @@
+2007-07-25  Michael Smith <msmith@fluendo.com>
+
+	* flumotion/component/producers/wms/asfparse.py:
+	* flumotion/component/producers/wms/wms.py:
+	* flumotion/component/producers/wms/wms.xml:
+	  Add (temporary) emergency hack to ignore keyframe flags in the
+	  stream. Hopefully allows audio-only streams that are incorrectly
+	  marked to work.
+
 2007-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/encoders/wmv/Makefile.am:
